--- a/templates/home.html
+++ b/templates/home.html
@@ -2,48 +2,71 @@
 
 <html>
     <head>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-        <title>virus_simulation</title>
+        <title>Virus Population Simulator</title>
     </head>
     <body>
-		<center>
-		<h1>Simulating the Spread of Disease and Virus Population Dynamics</h1>
-		<div id="plot" style="width:1200px;height:500px;"></div>
-		<form id="form">	
-			Number of Viruses: <input id="numViruses" placeholder="eg: 500" type="text" autocomplete="off" autofocus required/><br>
-			Maximum Population: <input id="maxPop" placeholder="eg: 1000" type="text" autocomplete="off" required/><br>
-			Maximum Birth Probability: <input id="maxBirthProb" placeholder="eg: 0.1" type="text" autocomplete="off" required/><br>
-			Clear Probability: <input id="clearProb" placeholder="eg: 0.05" type="text" autocomplete="off" required/><br>
-			Number of Trials: <input id="numTrials" placeholder="eg: 5" type="text" autocomplete="off" required/><br>
-			<input type="submit" value="Simulate"/>
-		</form>
-		<script>
-			document.getElementById("form").onsubmit = function(){
-				var aj = new XMLHttpRequest();
-				aj.onreadystatechange = function(){
-					if (aj.readyState == 4 && aj.status == 200){
-						if (aj.responseText == ""){
-							alert("Number of Viruses must be a non-negative integer!\nMaximum Population must be a non-negative integer!\nMaximum Birth Probability must be between 0 and 1!\nClear Probability must be between 0 and 1!\nNumber of Trials must be a non-negative integer!");
-							return false;
-						}
-						data = JSON.parse(aj.responseText);
-						plot = document.getElementById('plot');
-						Plotly.plot(plot, [{y: data}], {margin: { t: 0 } });
-					}
-				};
+    <div class="container">
+      <h1 class="my-4">Population Simulator
+        <small>Spread of Disease and Virus Population Dynamics</small>
+      </h1>
+      <div class="row">
+        <div class="col-md-8" style="border:1px solid #cecece;">
+          <div id="plot" style="width:100%;height:100%;"></div>
+          <!-- <div id="plot" style="width:750;height:500px;"></div> -->
+        </div>
 
-				var numViruses = document.getElementById("numViruses").value;
-				var maxPop = document.getElementById("maxPop").value;
-				var maxBirthProb = document.getElementById("maxBirthProb").value;
-				var clearProb = document.getElementById("clearProb").value;
-				var numTrials = document.getElementById("numTrials").value;
+        <div class="col-md-4">
 
-				aj.open("POST", "without_drug", true);
-				aj.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-				aj.send(`numViruses=${numViruses}&maxPop=${maxPop}&maxBirthProb=${maxBirthProb}&clearProb=${clearProb}&numTrials=${numTrials}`);
-				return false;
-			}
-		</script>
-		</center>
-	</body>
+          <h3 class="my-3">Description</h3>
+          <p>This is an extension of a problem set in 
+            <a href="https://www.edx.org/course/introduction-computational-thinking-data-mitx-6-00-2x-7" target="_blank">this fantastic edX MOOC from MITx</a>.
+            Please see 
+            <a href="https://github.com/chenky0401/virus_simulation/blob/master/ps3.md" target="_blank">here</a>
+             for more details.</p>
+          <h3 class="my-3">Parameters</h3>
+          <form id="form">  
+            Number of Viruses: <input id="numViruses" placeholder="eg: 500" type="text" autocomplete="off" autofocus required/><br>
+            Max Population: <input id="maxPop" placeholder="eg: 1000" type="text" autocomplete="off" required/><br>
+            Max Birth Probability: <input id="maxBirthProb" placeholder="eg: 0.1" type="text" autocomplete="off" required/><br>
+            Clear Probability: <input id="clearProb" placeholder="eg: 0.05" type="text" autocomplete="off" required/><br>
+            Number of Trials: <input id="numTrials" placeholder="eg: 5" type="text" autocomplete="off" required/><br>
+            <input class="btn btn-primary btn-lg" type="submit" value="Simulate"/>
+          </form>
+        </div>
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </body>
 </html>
+
+<script>
+  document.getElementById("form").onsubmit = function(){
+    var aj = new XMLHttpRequest();
+    aj.onreadystatechange = function(){
+      if (aj.readyState == 4 && aj.status == 200){
+        if (aj.responseText == ""){
+          alert("Number of Viruses must be a non-negative integer!\nMaximum Population must be a non-negative integer!\nMaximum Birth Probability must be between 0 and 1!\nClear Probability must be between 0 and 1!\nNumber of Trials must be a non-negative integer!");
+          return false;
+        }
+        data = JSON.parse(aj.responseText);
+        plot = document.getElementById('plot');
+        Plotly.plot(plot, [{y: data}], {margin: { t: 0 } });
+      }
+    };
+
+    var numViruses = document.getElementById("numViruses").value;
+    var maxPop = document.getElementById("maxPop").value;
+    var maxBirthProb = document.getElementById("maxBirthProb").value;
+    var clearProb = document.getElementById("clearProb").value;
+    var numTrials = document.getElementById("numTrials").value;
+
+    aj.open("POST", "without_drug", true);
+    aj.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+    aj.send(`numViruses=${numViruses}&maxPop=${maxPop}&maxBirthProb=${maxBirthProb}&clearProb=${clearProb}&numTrials=${numTrials}`);
+    return false;
+  }
+</script>
